# MassiveSwcManagement

./: CMakeLists.txt  main.cpp
Source/FileIo/: ApoIo.hpp  SwcIo.cppm  util.hpp
Source/MOctree/: BitsetUtil.cppm  MOctree.cppm
Source/ZOrderTree/: BitsetUtil.cppm  TypeAlias.cppm  ZOrderTree.cppm  ZOrderTreeBase.cppm
